<resources>
    <string name="app_name">Workout Log</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>
    <string name="exercise_name">Exercise_Name</string>
    <string name="exercise_reps">Number of Reps: </string>
    <string name="exercise_weight">Weight: </string>
    <string name="exercise_hint_num">Enter #  </string>
    <string name="exercise_hint_date">Enter Date  </string>
    <string name="exercise_date">Date Performed: </string>
    <string name="emptyLogg"> Tap to Add an Exercise </string>

    <!-- Action Bar settings -->
    <string name="action_settings_add">Add to Log</string>
    <string name="action_settings_alphSort">Sort Alphabetically</string>
    <string name="action_settings_dateSort">Sort By Date</string>
    <string name="action_settings_prSort">Sort By Personal Best</string>
    <string name="action_settings_search">Search</string>
    <string name="action_settings_search2">Search</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_workout_log">MyLog</string>
    <string name="title_activity_new_workout">Create New Workout</string>
    <string name="title_activity_add_exercise">Add Exercise</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_teest">teest</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Chest</string>
    <string name="tab_text_3">Arms</string>
    <string name="tab_text_4">Shoulders</string>
    <string name="tab_text_5">Back</string>
    <string name="tab_text_6">Legs</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history">History</string>

</resources>
